syntax = "proto3";

option csharp_namespace = "Identity.WebApi.Protos";

service UserProtoService
{
	rpc SendUserOperation (Request) returns (Response);
}

message UserRequest
{ 
	int32 id = 1;
	string Login = 2;
}

enum Operation
{
	Create = 0;
	Update = 1;
	Delete = 2;
}

message GrpcUserOperationModel
{
	UserRequest thisRequest = 1;
	Operation operation = 2;
}

message Request
{
	GrpcUserOperationModel userOperation = 1;
}

message Response
{

}
